antlr4/ADAParser.cpp

    #include <map>
    #include "intermediate/symtab/Symtab.h"
    #include "intermediate/type/Typespec.h"
    using namespace intermediate::symtab;
    using namespace intermediate::type;


// Generated from ADA.g4 by ANTLR 4.9.1


#include "ADAVisitor.h"

#include "ADAParser.h"


using namespace antlrcpp;
using namespace antlr4;

ADAParser::ADAParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

ADAParser::~ADAParser() {
  delete _interpreter;
}

std::string ADAParser::getGrammarFileName() const {
  return "ADA.g4";
}

const std::vector<std::string>& ADAParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& ADAParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

ADAParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ADAParser::ProgramHeaderContext* ADAParser::ProgramContext::programHeader() {
  return getRuleContext<ADAParser::ProgramHeaderContext>(0);
}

ADAParser::BlockContext* ADAParser::ProgramContext::block() {
  return getRuleContext<ADAParser::BlockContext>(0);
}

ADAParser::ProgramIdentifierContext* ADAParser::ProgramContext::programIdentifier() {
  return getRuleContext<ADAParser::ProgramIdentifierContext>(0);
}


size_t ADAParser::ProgramContext::getRuleIndex() const {
  return ADAParser::RuleProgram;
}


antlrcpp::Any ADAParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::ProgramContext* ADAParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ADAParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(194);
    programHeader();
    setState(195);
    block();
    setState(197);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ADAParser::IDENTIFIER) {
      setState(196);
      programIdentifier();
    }
    setState(199);
    match(ADAParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramHeaderContext ------------------------------------------------------------------

ADAParser::ProgramHeaderContext::ProgramHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ADAParser::ProgramHeaderContext::PROCEDURE() {
  return getToken(ADAParser::PROCEDURE, 0);
}

ADAParser::ProgramIdentifierContext* ADAParser::ProgramHeaderContext::programIdentifier() {
  return getRuleContext<ADAParser::ProgramIdentifierContext>(0);
}

tree::TerminalNode* ADAParser::ProgramHeaderContext::IS() {
  return getToken(ADAParser::IS, 0);
}


size_t ADAParser::ProgramHeaderContext::getRuleIndex() const {
  return ADAParser::RuleProgramHeader;
}


antlrcpp::Any ADAParser::ProgramHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitProgramHeader(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::ProgramHeaderContext* ADAParser::programHeader() {
  ProgramHeaderContext *_localctx = _tracker.createInstance<ProgramHeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, ADAParser::RuleProgramHeader);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(201);
    match(ADAParser::PROCEDURE);
    setState(202);
    programIdentifier();
    setState(203);
    match(ADAParser::IS);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramIdentifierContext ------------------------------------------------------------------

ADAParser::ProgramIdentifierContext::ProgramIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ADAParser::ProgramIdentifierContext::IDENTIFIER() {
  return getToken(ADAParser::IDENTIFIER, 0);
}


size_t ADAParser::ProgramIdentifierContext::getRuleIndex() const {
  return ADAParser::RuleProgramIdentifier;
}


antlrcpp::Any ADAParser::ProgramIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitProgramIdentifier(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::ProgramIdentifierContext* ADAParser::programIdentifier() {
  ProgramIdentifierContext *_localctx = _tracker.createInstance<ProgramIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 4, ADAParser::RuleProgramIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(205);
    match(ADAParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementIdentifierContext ------------------------------------------------------------------

ADAParser::StatementIdentifierContext::StatementIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ADAParser::StatementIdentifierContext::IDENTIFIER() {
  return getToken(ADAParser::IDENTIFIER, 0);
}


size_t ADAParser::StatementIdentifierContext::getRuleIndex() const {
  return ADAParser::RuleStatementIdentifier;
}


antlrcpp::Any ADAParser::StatementIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitStatementIdentifier(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::StatementIdentifierContext* ADAParser::statementIdentifier() {
  StatementIdentifierContext *_localctx = _tracker.createInstance<StatementIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 6, ADAParser::RuleStatementIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(207);
    match(ADAParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

ADAParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ADAParser::DeclarationsContext* ADAParser::BlockContext::declarations() {
  return getRuleContext<ADAParser::DeclarationsContext>(0);
}

ADAParser::CompoundStatementContext* ADAParser::BlockContext::compoundStatement() {
  return getRuleContext<ADAParser::CompoundStatementContext>(0);
}


size_t ADAParser::BlockContext::getRuleIndex() const {
  return ADAParser::RuleBlock;
}


antlrcpp::Any ADAParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::BlockContext* ADAParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 8, ADAParser::RuleBlock);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(209);
    declarations();
    setState(210);
    compoundStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

ADAParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ADAParser::SubprogramPartContext* ADAParser::DeclarationsContext::subprogramPart() {
  return getRuleContext<ADAParser::SubprogramPartContext>(0);
}

ADAParser::ConstantsPartContext* ADAParser::DeclarationsContext::constantsPart() {
  return getRuleContext<ADAParser::ConstantsPartContext>(0);
}

ADAParser::TypesPartContext* ADAParser::DeclarationsContext::typesPart() {
  return getRuleContext<ADAParser::TypesPartContext>(0);
}

ADAParser::VariablesPartContext* ADAParser::DeclarationsContext::variablesPart() {
  return getRuleContext<ADAParser::VariablesPartContext>(0);
}


size_t ADAParser::DeclarationsContext::getRuleIndex() const {
  return ADAParser::RuleDeclarations;
}


antlrcpp::Any ADAParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::DeclarationsContext* ADAParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 10, ADAParser::RuleDeclarations);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(215);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ADAParser::PROCEDURE

    || _la == ADAParser::FUNCTION) {
      setState(212);
      subprogramPart();
      setState(213);
      match(ADAParser::T__0);
    }
    setState(220);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ADAParser::CONST) {
      setState(217);
      constantsPart();
      setState(218);
      match(ADAParser::T__0);
    }
    setState(225);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ADAParser::TYPE) {
      setState(222);
      typesPart();
      setState(223);
      match(ADAParser::T__0);
    }
    setState(230);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == ADAParser::IDENTIFIER) {
      setState(227);
      variablesPart();
      setState(228);
      match(ADAParser::T__0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantsPartContext ------------------------------------------------------------------

ADAParser::ConstantsPartContext::ConstantsPartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ADAParser::ConstantsPartContext::CONST() {
  return getToken(ADAParser::CONST, 0);
}

ADAParser::ConstantDefinitionsListContext* ADAParser::ConstantsPartContext::constantDefinitionsList() {
  return getRuleContext<ADAParser::ConstantDefinitionsListContext>(0);
}


size_t ADAParser::ConstantsPartContext::getRuleIndex() const {
  return ADAParser::RuleConstantsPart;
}


antlrcpp::Any ADAParser::ConstantsPartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitConstantsPart(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::ConstantsPartContext* ADAParser::constantsPart() {
  ConstantsPartContext *_localctx = _tracker.createInstance<ConstantsPartContext>(_ctx, getState());
  enterRule(_localctx, 12, ADAParser::RuleConstantsPart);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(232);
    match(ADAParser::CONST);
    setState(233);
    constantDefinitionsList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionsListContext ------------------------------------------------------------------

ADAParser::ConstantDefinitionsListContext::ConstantDefinitionsListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ADAParser::ConstantDefinitionContext *> ADAParser::ConstantDefinitionsListContext::constantDefinition() {
  return getRuleContexts<ADAParser::ConstantDefinitionContext>();
}

ADAParser::ConstantDefinitionContext* ADAParser::ConstantDefinitionsListContext::constantDefinition(size_t i) {
  return getRuleContext<ADAParser::ConstantDefinitionContext>(i);
}


size_t ADAParser::ConstantDefinitionsListContext::getRuleIndex() const {
  return ADAParser::RuleConstantDefinitionsList;
}


antlrcpp::Any ADAParser::ConstantDefinitionsListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitConstantDefinitionsList(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::ConstantDefinitionsListContext* ADAParser::constantDefinitionsList() {
  ConstantDefinitionsListContext *_localctx = _tracker.createInstance<ConstantDefinitionsListContext>(_ctx, getState());
  enterRule(_localctx, 14, ADAParser::RuleConstantDefinitionsList);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(235);
    constantDefinition();
    setState(240);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(236);
        match(ADAParser::T__0);
        setState(237);
        constantDefinition(); 
      }
      setState(242);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionContext ------------------------------------------------------------------

ADAParser::ConstantDefinitionContext::ConstantDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ADAParser::ConstantIdentifierContext* ADAParser::ConstantDefinitionContext::constantIdentifier() {
  return getRuleContext<ADAParser::ConstantIdentifierContext>(0);
}

ADAParser::ConstantContext* ADAParser::ConstantDefinitionContext::constant() {
  return getRuleContext<ADAParser::ConstantContext>(0);
}


size_t ADAParser::ConstantDefinitionContext::getRuleIndex() const {
  return ADAParser::RuleConstantDefinition;
}


antlrcpp::Any ADAParser::ConstantDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitConstantDefinition(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::ConstantDefinitionContext* ADAParser::constantDefinition() {
  ConstantDefinitionContext *_localctx = _tracker.createInstance<ConstantDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 16, ADAParser::RuleConstantDefinition);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(243);
    constantIdentifier();
    setState(244);
    match(ADAParser::T__1);
    setState(245);
    constant();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantIdentifierContext ------------------------------------------------------------------

ADAParser::ConstantIdentifierContext::ConstantIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ADAParser::ConstantIdentifierContext::IDENTIFIER() {
  return getToken(ADAParser::IDENTIFIER, 0);
}


size_t ADAParser::ConstantIdentifierContext::getRuleIndex() const {
  return ADAParser::RuleConstantIdentifier;
}


antlrcpp::Any ADAParser::ConstantIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitConstantIdentifier(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::ConstantIdentifierContext* ADAParser::constantIdentifier() {
  ConstantIdentifierContext *_localctx = _tracker.createInstance<ConstantIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 18, ADAParser::RuleConstantIdentifier);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(247);
    match(ADAParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

ADAParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ADAParser::ConstantContext::IDENTIFIER() {
  return getToken(ADAParser::IDENTIFIER, 0);
}

ADAParser::UnsignedNumberContext* ADAParser::ConstantContext::unsignedNumber() {
  return getRuleContext<ADAParser::UnsignedNumberContext>(0);
}

ADAParser::SignContext* ADAParser::ConstantContext::sign() {
  return getRuleContext<ADAParser::SignContext>(0);
}

ADAParser::CharacterConstantContext* ADAParser::ConstantContext::characterConstant() {
  return getRuleContext<ADAParser::CharacterConstantContext>(0);
}

ADAParser::StringConstantContext* ADAParser::ConstantContext::stringConstant() {
  return getRuleContext<ADAParser::StringConstantContext>(0);
}


size_t ADAParser::ConstantContext::getRuleIndex() const {
  return ADAParser::RuleConstant;
}


antlrcpp::Any ADAParser::ConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitConstant(this);
  else
    return visitor->visitChildren(this);
}

ADAParser::ConstantContext* ADAParser::constant() {
  ConstantContext *_localctx = _tracker.createInstance<ConstantContext>(_ctx, getState());
  enterRule(_localctx, 20, ADAParser::RuleConstant);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(258);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case ADAParser::T__2:
      case ADAParser::T__3:
      case ADAParser::IDENTIFIER:
      case ADAParser::INTEGER:
      case ADAParser::REAL: {
        enterOuterAlt(_localctx, 1);
        setState(250);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == ADAParser::T__2

        || _la == ADAParser::T__3) {
          setState(249);
          sign();
        }
        setState(254);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case ADAParser::IDENTIFIER: {
            setState(252);
            match(ADAParser::IDENTIFIER);
            break;
          }

          case ADAParser::INTEGER:
          case ADAParser::REAL: {
            setState(253);
            unsignedNumber();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        break;
      }

      case ADAParser::CHARACTER: {
        enterOuterAlt(_localctx, 2);
        setState(256);
        characterConstant();
        break;
      }

      case ADAParser::STRING: {
        enterOuterAlt(_localctx, 3);
        setState(257);
        stringConstant();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignContext ------------------------------------------------------------------

ADAParser::SignContext::SignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t ADAParser::SignContext::getRuleIndex() const {
  return ADAParser::RuleSign;
}


antlrcpp::Any ADAParser::SignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<ADAVisitor*>(visitor))
    return parserVisitor->visitSign(this);
  else
    return visitor->visitChildren(this);
}
